use vite bundler

--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
 
 <body>
   <canvas id="canvas1"></canvas>
-  <script src="Ball.js"></script>
-  <script src="Arrow.js"></script>
-  <script src="index.js"></script>
-  <script src="mouseListeners.js"></script>
+  <script type="module" src="/src/index.ts"></script>
 </body>
 
 </html>
